--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p class="text-3xl text-red-400">Hola Mundo</p>
+    <p class="text-center text-rose-950"> hola 2</p> 
     <script type="module" src="/main.js"></script>
   </body>
 </html>
