--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <p class="text-3xl text-red-400">Hola Mundo</p>
-    <p class="text-center text-rose-950"> hola 2</p> 
+    <p class="text-center text-rose-950"> hola 2</p>
+    <p class="text-3xl text-blue-500">Hola Soy Duban y Este es un comentario</p>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
