Este es mi comentario

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p class="text-3xl text-red-400">Hola Mundo</p>
     <p class="text-center text-rose-950"> hola 2</p>
     <p class="text-3xl text-blue-500">Hola Soy Duban y Este es un comentario</p>
+    <p class="text-3xl text-blue-400">Hola Soy Juan Meneses y Este es un comentario</p>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
