--- a/index.html
+++ b/index.html
@@ -7,8 +7,56 @@
     <title>Vite App</title>
   </head>
   <body>
-    <p class="text-3xl text-red-400">Hola Mundo</p>
-    <p class="text-center text-rose-950"> hola 2</p> 
+
     <script type="module" src="/main.js"></script>
+
+
+    <div class="flex flex-col h-screen">
+      <!-- Barra Superior -->
+      <header class="bg-gray-100 p-4 flex items-center justify-between shadow">
+          <div class="flex items-center">
+              <img src="ruta/a/tu/logo.png" alt="Logo" class="h-8">
+              <nav class="ml-6 flex space-x-4">
+                  <a href="#" class="text-gray-600 hover:text-blue-600">Pedidos</a>
+                  <a href="#" class="text-gray-600 hover:text-blue-600">Entregas</a>
+                  <a href="#" class="text-gray-600 hover:text-blue-600">Negocios</a>
+                  <a href="#" class="text-gray-600 hover:text-blue-600">Usuarios</a>
+                  <a href="#" class="text-gray-600 hover:text-blue-600">Configuraciones</a>
+              </nav>
+          </div>
+          <div class="flex items-center space-x-4">
+              <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
+              <button class="bg-dark-blue-600-" text-white px-4 py-2 rounded>Administración</button>
+              <img src="ruta/a/tu/avatar.png" alt="Avatar" class="h-8 w-8 rounded-full">
+          </div>
+      </header>
+  
+      <!-- Contenido Principal -->
+      <div class="flex flex-1">
+          <!-- Panel Izquierdo -->
+          <aside class="w-1/4 bg-white p-4 shadow">
+              <div class="mb-4">
+                  <input type="text" placeholder="Buscar..." class="border rounded p-2 w-full">
+              </div>
+              <div>
+                  <div class="flex items-center space-x-2">
+                      <span class="text-sm text-gray-700">No asignado</span>
+                      <button class="bg-blue-600 text-white px-2 py-1 rounded text-xs">+</button>
+                  </div>
+                  <div class="mt-2 bg-gray-100 p-2 rounded shadow-inner">
+                      <p>Tarea #1</p>
+                      <p class="text-xs text-gray-500">plaza bolivar comuna 1 popayan cauca 12:00 am - 4:00 pm</p>
+                  </div>
+              </div>
+          </aside>
+  
+          <!-- Mapa -->
+          <main class="flex-1 p-4">
+              <div class="h-full w-full">
+                  <img src="ruta/a/tu/mapa.png" alt="Mapa" class="h-full w-full object-cover rounded">
+              </div>
+          </main>
+      </div>
+  </div>
   </body>
 </html>
