--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
               </div>
               <div>
                   <div class="flex items-center space-x-2">
-                      <span class="text-sm text-gray-700">No asignado</span>
-                      <button class="bg-blue-600 text-white px-2 py-1 rounded text-xs">+</button>
+                      <span class="text-sm text-black-700">No asignado</span>
+                      <button class="bg-darkblue text-white px-2 py-1 rounded text-xs">+</button>
                   </div>
-                  <div class="mt-2 bg-gray-100 p-2 rounded shadow-inner">
+                  <div class="mt-2 bg-blue-300 p-2 rounded shadow-inner">
                       <p>Tarea #1</p>
-                      <p class="text-xs text-gray-500">plaza bolivar comuna 1 popayan cauca 12:00 am - 4:00 pm</p>
+                      <p class="text-light blue-500">plaza bolivar comuna 1 popayan cauca 12:00 am - 4:00 pm</p>
                   </div>
               </div>
           </aside>
-  
+  <h1> el que lo lea me debe mil</h1> 
           <!-- Mapa -->
           <main class="flex-1 p-4">
               <div class="h-full w-full">
