--- a/index.html
+++ b/index.html
@@ -75,18 +75,7 @@
               </div>
           </aside>
  
-             <!-- Mapa -->
-            <main class="flex-1 p-4">
-              <div class="h-full w-full">
-               <img src="public\imagenes\mapa.png" alt="Mapa" class="h-full w-full object-cover rounded">
-              </div>
-            </main>
-
-            
-      </div>
-  </div>
-
-
+             <!-- Mapa -->eduar
   <div><li>Hola</li></div>
 
   <script type="module" src="/main.js"></script>
