--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              </button>
          
             
-           <!--ADMINISTRACION-->>
+           <!--ADMINISTRACION-->
           <div class="flex items-center space-x-4">
           <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
           <button class="bg-dark-blue-600-" text-white px-4 py-2 rounded>Administración</button>
@@ -77,7 +77,7 @@
              <!-- Mapa -->
             <main class="flex-1 p-4">
               <div class="h-full w-full">
-               <img src="public\imagenes\mapa.png" alt="Mapa" class="h-full w-full object-cover rounded">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15944.358611131536!2d-76.5591552!3d2.4772608000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1724249238338!5m2!1ses-419!2sco" width="1500" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </main>
 
