--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!-- lado Izquierdo -->
               <aside class="w-1/4 bg-white p-4 shadow ">
               <div class="mb-4  ">
-                  <input type="text" placeholder="Buscar..." class="border rounded p-2 w-full scroll-mx-0">
+                  <input type="text" placeholder="Buscar..." class="border rounded p-2 w-full">
               </div>
 
               <div>
