--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
           <div class="flex items-center">
             <img src="public\imagenes\image.png" alt="Logo" class="h-8">
               <nav class="ml-6 flex space-x-4">
+
+                  <img src="public\imagenes\pedidos.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear ">Pedidos</a>
+
+                  <img src="public\imagenes\entregas.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Entregas</a>
 
                   <img src="public\imagenes\negocios.png" alt="Logo" class="h-6" >
