--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
               <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
 
-              
-<div class="flex justify-start flex-between">
+
+<div class="flex justify-start flex-betweet" >
 <img src="public\imagenes\filtro.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Filtros</a>
 </div>
