--- a/index.html
+++ b/index.html
@@ -13,27 +13,26 @@
           <div class="flex items-center">
             <img src="public\imagenes\image.png" alt="Logo" class="h-8">
               <nav class="ml-6 flex space-x-4">
-<<<<<<< HEAD
-                  <a href="#" class="text-darkblue hover:text-blueclear ">Pedidos</a>
-=======
 
                 <img src="public\imagenes\pedidos.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear"> Pedidos </a>
 
                   <img src="public\imagenes\entregas.png" alt="Logo" class="h-6" >
->>>>>>> 78f1c00cae1bf33703d96173def310835c4269a4
                   <a href="#" class="text-darkblue hover:text-blueclear">Entregas</a>
 
                   <img src="public\imagenes\negocios.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Negocios</a>
 
-                  <img src="public\imagenes\icono.png" alt="Logo" class="h-6" >
+                  <img src="public\imagenes\icono.png" alt="Logo" class="h-6"   x>
                   <a href="#" class="text-darkblue hover:text-blueclear">Usuarios</a>
 
                   <img src="public\imagenes\configuraciones.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Configuraciones</a>
               </nav>
            </div>
+
+
+
 
 
 
@@ -118,8 +117,6 @@
 
       </div>
   </div> 
-
-
 
 
   <script type="module" src="/main.js"></script>
