Organizacion de Diseño

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
               <a href="#" class="text-darkblue hover:text-lightblue relative ">Importar</a>
              </div>
               </div>
-
+              
+              <!--BUSCADOR DE FECHA Toca organizar el diseño-->
               <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
 
 
