Organizacion de Diseño

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
              </div>
               </div>
               
-              <!--BUSCADOR DE FECHA Toca organizar el diseño-->
+              <!--BUSCADOR DE FECHA Toca organizar el diseño del input-->
               <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
 
 
