--- a/pedidos.html
+++ b/pedidos.html
@@ -20,7 +20,7 @@
 
                     <div class="group flex items-center space-x-1">
                       <img src="public/imagenes/pedidos.png" alt="Logo" class="h-6">
-                      <a href="pedidos.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Pedidos</a>
+                      <a href="#" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Pedidos</a>
                     </div>
 
                     <div class="group flex items-center space-x-1">
@@ -137,18 +137,6 @@
    
 
 
-
-             <!-- Mapa -->
-            <main class="flex-1 p-4">
-              <div class="h-full w-full">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15944.358611131536!2d-76.5591552!3d2.4772608000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1724249238338!5m2!1ses-419!2sco" 
-                width="1200" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-               </iframe>
-              </div>
-            </main> 
-
-           <!-- <main class=" col-span-0">  no borrar-->
-          
 
       </div>
   </div> 
