--- a/pedidos.html
+++ b/pedidos.html
@@ -26,12 +26,13 @@
                   <img src="public\imagenes\negocios.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Negocios</a>
 
-                  <img src="public\imagenes\icono.png" alt="Logo" class="h-6" >
+                  <img src="public\imagenes\Usuario.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Usuarios</a>
 
                   <img src="public\imagenes\configuraciones.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-darkblue hover:text-blueclear">Configuraciones</a>
 
+                  <img src="public\imagenes\cuenta.png" alt="Logo" class="h-6" >
                   <a href="#" class="text-gray-600 hover:text-gray-800">Cuenta</a>
 
                   <div class="flex items-center space-x-2">
@@ -45,11 +46,11 @@
             
   
           <!-- Right Section: Search and Profile -->
-          <div class="flex items-center space-x-4">
+          <div class="grid grid-cols-5 gap-10 p-4">
 
-
+            <div class="flex justify-start flex-between">
               <button class="bg-gray-200 text-gray-600 px-2 py-1 rounded-lg">Ver pedidos cancelados</button>
-
+            </div>
 
               <div class="relative">
                   <input type="text" placeholder="Buscar pedidos" class="px-3 py-2 border border-gray-300 rounded-lg">
