--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="flex flex-col h-screen border-r-2">
+    <!-- <div class="flex flex-col h-screen">
+      <! Barra Superior  
       <header class="bg-bluecielo p-4 flex items-center justify-between shadow animate-fade-in"> --> 
               <header class="bg-blueclear p-4 flex flex-col sm:flex-row items-center justify-between shadow animate-fade-in">
                 <div class="flex items-center">
@@ -126,8 +128,9 @@
 
             <!-- Buscador -->
             <div class="px-3 pb-3 ">
-              <input type="text" placeholder="Seleccione una etiqueta, una plaza de mercado..." class= "w-full text-black p-2 rounded-md border-solid border-2 border-sky-950">
-   
+              <input type="text" placeholder="Seleccione una etiqueta, una plaza de mercado..." class= "w-full text-black p-2 rounded-md border-solid border-2 ">
+              <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
+
             </div>
           
             <!-- Lista -->
@@ -169,6 +172,8 @@
                </iframe>
               </div>
             </main> 
+
+           <!-- <main class=" col-span-0">  no borrar-->
           
 
       </div>
