--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </main> 
 
            <!-- <main class=" col-span-0">  no borrar-->
-          <!-- manos resuelvan-->
+          <p>hola   r</p>
 
       </div>
   </div> 
