--- a/otroFork.html
+++ b/otroFork.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archivo Fork</title>
+    <title>Otro Fork</title>
 </head>
 <body>
-    <p> Esto es un parrafo dentro de un archivo llamado fork </p>
+    <h1>Bienvenido </h1>
 </body>
 </html>
