--- a/pedidos.html
+++ b/pedidos.html
@@ -52,12 +52,21 @@
         </div>
     </header>
 
-    <div class="flex items-center justify-beetwee x-7 p-4">
+    <div class="flex items-center justify-beetwee p-4">
+
+        <div class="flex row">
         <button class="bg-gray-200 text-black px-4 py-2 rounded">Ver Pedidos Cancelados</button>
+        </div>
+
+        <div>
         <input type="text" placeholder="Buscar pedidos" class="border border-gray-300 rounded px-4 py-2">
+        </div>
+
+        <div>
          <!-- Icono de Importar-->
         <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
         <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
+     </div>
         
         <div class="ml-auto" >
             <p id="parrafo" class="text-darkblue hover:text-lightblue text-4xl "> PanasCoop </p>
@@ -125,6 +134,6 @@
         <p class="text-sm text-gray-500">&copy; 2024 PanascOp</p>
     </footer>
 
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
