--- a/pedidos.html
+++ b/pedidos.html
@@ -1,141 +1,99 @@
-<!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel de administrador</title>
-    <link rel="icon" type="image/x-icon" href="public\imagenes\image.png">
-
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-gray-100">
-
-    <!-- Header -->
-    <header class="bg-white shadow p-4 flex justify-between items-center">
+    <div class="bg-white shadow-md p-4 flex items-center justify-between">
         <div class="flex items-center">
-            <img src="public\imagenes\image.png" alt="Logo" class="h-8 mr-2">
-            <h1 class="text-xl font-semibold">Panel de administrador</h1>
+            <img alt="Logo" class="h-10 w-10 mr-2" height="50" src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-BVbpSZmLndA7MfHIxv2ahIKS/user-IBY8IaMXtVn7IVIdZeyvjx16/img-55CLjMJ1uPNcK86R0GAmH4U5.png?st=2024-09-01T20%3A04%3A37Z&se=2024-09-01T22%3A04%3A37Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-31T23%3A20%3A11Z&ske=2024-09-01T23%3A20%3A11Z&sks=b&skv=2024-08-04&sig=TBHYN8lbPQsmhBShhA2ejsHpvMz3xgrDAm%2BqxBB1sBs%3D" width="50"/>
+            <h1 class="text-xl font-bold">Panel de administrador</h1>
         </div>
         <div class="flex space-x-4">
-            <img src="public/imagenes/pedidos.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-box-open"></i> Pedidos
-            </button>
-
-            <img src="public/imagenes/entregas.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-truck"></i> Entregas
-            </button>
-
-            <img src="public/imagenes/negocios.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-store"></i> Negocios
-            </button>
-
-            <img src="public/imagenes/Usuario.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-users"></i> Usuarios
-            </button>
-
-            <img src="public/imagenes/configuraciones.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-cog"></i> Configuraciones
-            </button>
-
-            <img src="public\imagenes\cuenta.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-user-circle"></i> Cuenta
-            </button>
-
-            <img src="public\imagenes\Administrador.png" alt="Logo" class="h-6">
-            <button class="text-gray-600 hover:text-gray-800">
-                <i class="fas fa-sign-out-alt"></i> Administración
-            </button>
+            <a class="text-gray-600 hover:text-black" href="#">Pedidos</a>
+            <a class="text-gray-600 hover:text-black" href="#">Entregas</a>
+            <a class="text-gray-600 hover:text-black" href="#">Negocios</a>
+            <a class="text-gray-600 hover:text-black" href="#">Usuarios</a>
+            <a class="text-gray-600 hover:text-black" href="#">Configuraciones</a>
+            <a class="text-gray-600 hover:text-black" href="#">Cuenta</a>
+            <a class="text-gray-600 hover:text-black" href="#">Administracion</a>
         </div>
-    </header>
-
-    <div class="flex items-center justify-beetwee p-4">
-
-        <div class="flex row">
-        <button class="bg-gray-200 text-black px-4 py-2 rounded">Ver Pedidos Cancelados</button>
+        <div class="flex items-center space-x-2">
+            <span class="text-green-500 font-bold">99+</span>
+            <img alt="User Avatar" class="h-10 w-10 rounded-full" height="50" src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-BVbpSZmLndA7MfHIxv2ahIKS/user-IBY8IaMXtVn7IVIdZeyvjx16/img-9Crx6OZqWlaLXDq059Y2FV70.png?st=2024-09-01T20%3A04%3A32Z&se=2024-09-01T22%3A04%3A32Z&sp=r&sv=2024-08-04&sr=b&rscd=inline&rsct=image/png&skoid=d505667d-d6c1-4a0a-bac7-5c84a87759f8&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-08-31T23%3A46%3A07Z&ske=2024-09-01T23%3A46%3A07Z&sks=b&skv=2024-08-04&sig=LcUCHJZzF9CtEnkFhTIMl%2B3sagexfq6TSLwKRE6ycCE%3D" width="50"/>
         </div>
-
-        <div>
-        <input type="text" placeholder="Buscar pedidos" class="border border-gray-300 rounded px-4 py-2">
+    </div>
+    <div class="bg-white shadow-md p-4 mt-4 flex items-center justify-between">
+        <div class="flex items-center space-x-4">
+            <button class="bg-gray-200 px-4 py-2 rounded" onclick="toggleOrders()">Ver pedidos cancelados</button>
+            <input class="border border-gray-300 rounded px-4 py-2" placeholder="Buscar pedidos" type="text" id="searchInput" onkeyup="searchOrders()"/>
+            <!-- Icono de Exportar -->
+            <div class="bg-blue-500 text-white px-4 py-2 rounded flex items-center space-x-2">
+                <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
+                <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
+                </div>
         </div>
-
-        <div>
-         <!-- Icono de Importar-->
-        <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
-        <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
-        </div>
-        
-        <div class="ml-auto" >
-            <p id="parrafo" class="text-darkblue hover:text-lightblue text-4xl "> PanasCoop </p>
-          </div> 
+    </div>
+    <div class="bg-white shadow-md p-4 mt-4">
+        <table class="w-full text-center" id="ordersTable">
+            <thead>
+                <tr class="border-b">
+                    <th class="py-2">#</th>
+                    <th class="py-2">Cliente</th>
+                    <th class="py-2">Estado</th>
+                    <th class="py-2">Resumen</th>
+                    <th class="py-2">Total</th>
+                    <th class="py-2">Factura</th>
+                    <th class="py-2">Hora de entrega</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="border-b">
+                    <td class="py-2"># 9C9</td>
+                    <td class="py-2">celia cruz</td>
+                    <td class="py-2"><span class="bg-green-500 text-white px-2 py-1 rounded">Entregado</span></td>
+                    <td class="py-2">Entregar al restaurante el Rincon</td>
+                    <td class="py-2">46.000 COP</td>
+                    <td class="py-2"><i class="fas fa-file-invoice"></i></td>
+                    <td class="py-2">14/08/2024 12:00 - 17:19</td>
+                </tr>
+                <tr class="border-b">
+                    <td class="py-2"># M78</td>
+                    <td class="py-2">camilo torres</td>
+                    <td class="py-2"><span class="bg-red-500 text-white px-2 py-1 rounded">Rechazado</span></td>
+                    <td class="py-2">Entregar al restaurante el Fusion</td>
+                    <td class="py-2">77.000 COP</td>
+                    <td class="py-2"><i class="fas fa-file-invoice"></i></td>
+                    <td class="py-2">14/08/2024 01:00 - 16:10</td>
+                </tr>
+                <tr class="border-b">
+                    <td class="py-2"># 4JD</td>
+                    <td class="py-2">rodrigo perez</td>
+                    <td class="py-2"><span class="bg-green-500 text-white px-2 py-1 rounded">Entregado</span></td>
+                    <td class="py-2">Entregar al restaurante gourmet</td>
+                    <td class="py-2">22.000 COP</td>
+                    <td class="py-2"><i class="fas fa-file-invoice"></i></td>
+                    <td class="py-2">14/08/2024 12:00 - 14:10</td>
+                </tr>
+                <tr>
+                    <td class="py-2"># HJ8</td>
+                    <td class="py-2">sergio caro</td>
+                    <td class="py-2"><span class="bg-green-500 text-white px-2 py-1 rounded">Entregado</span></td>
+                    <td class="py-2">Entregar al restaurante Delicias</td>
+                    <td class="py-2">12.000 COP</td>
+                    <td class="py-2"><i class="fas fa-file-invoice"></i></td>
+                    <td class="py-2">14/08/2024 14:00 - 18:00</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     
-
-        <div class="bg-white shadow rounded-md overflow-hidden">
-            <table class="min-w-full table-auto">
-                <thead class="bg-gray-50">
-                    <tr>
-                        <th class="px-4 py-2 text-left text-gray-600">#</th>
-                        <th class="px-4 py-2 text-left text-gray-600">Cliente</th>
-                        <th class="px-4 py-2 text-left text-gray-600">Estado</th>
-                        <th class="px-4 py-2 text-left text-gray-600">Resumen</th>
-                        <th class="px-4 py-2 text-left text-gray-600">Total</th>
-                        <th class="px-4 py-2 text-left text-gray-600">Factura</th>
-                        <th class="px-4 py-2 text-left text-gray-600">Hora de entrega</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="bg-white border-b">
-                        <td class="px-4 py-2"># 9C9</td>
-                        <td class="px-4 py-2">Celia Cruz</td>
-                        <td class="px-4 py-2"><span class="bg-green-500 text-white px-2 py-1 rounded-full text-sm">Entregado</span></td>
-                        <td class="px-4 py-2">Entregar al restaurante el Rincon</td>
-                        <td class="px-4 py-2">46.000 COP</td>
-                        <td class="px-4 py-2"><i class="fas fa-file-invoice"></i></td>
-                        <td class="px-4 py-2">14/08/2024 12:00 - 17:19</td>
-                    </tr>
-                    <tr class="bg-white border-b">
-                        <td class="px-4 py-2"># M78</td>
-                        <td class="px-4 py-2">Camilo Torres</td>
-                        <td class="px-4 py-2"><span class="bg-red-500 text-white px-2 py-1 rounded-full text-sm">Rechazado</span></td>
-                        <td class="px-4 py-2">Entregar al restaurante el Fusion</td>
-                        <td class="px-4 py-2">77.000 COP</td>
-                        <td class="px-4 py-2"><i class="fas fa-file-invoice"></i></td>
-                        <td class="px-4 py-2">14/08/2024 01:00 - 16:10</td>
-                    </tr>
-                    <tr class="bg-white border-b">
-                        <td class="px-4 py-2"># 4JD</td>
-                        <td class="px-4 py-2">Rodrigo Perez</td>
-                        <td class="px-4 py-2"><span class="bg-green-500 text-white px-2 py-1 rounded-full text-sm">Entregado</span></td>
-                        <td class="px-4 py-2">Entregar al restaurante gourmet</td>
-                        <td class="px-4 py-2">22.000 COP</td>
-                        <td class="px-4 py-2"><i class="fas fa-file-invoice"></i></td>
-                        <td class="px-4 py-2">14/08/2024 14:00 - 18:00</td>
-                    </tr>
-                    <tr class="bg-white border-b">
-                        <td class="px-4 py-2"># HJ8</td>
-                        <td class="px-4 py-2">Sergio Caro</td>
-                        <td class="px-4 py-2"><span class="bg-green-500 text-white px-2 py-1 rounded-full text-sm">Entregado</span></td>
-                        <td class="px-4 py-2">Entregar al restaurante Delicias</td>
-                        <td class="px-4 py-2">12.000 COP</td>
-                        <td class="px-4 py-2"><i class="fas fa-file-invoice"></i></td>
-                        <td class="px-4 py-2">14/08/2024 14:00 - 18:00</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-white shadow p-4 text-center">
-        <p class="text-sm text-gray-500">&copy; 2024 PanascOp</p>
-    </footer>
-
-    <script type="module" src="/main.js"></script>
-</body>
-</html>
+    <script src="Pedidos.js"></script>
+    </body>
+    </html>
