--- a/pedidos.html
+++ b/pedidos.html
@@ -34,10 +34,9 @@
             <button class="bg-gray-200 px-4 py-2 rounded" onclick="toggleOrders()">Ver pedidos cancelados</button>
             <input class="border border-gray-300 rounded px-4 py-2" placeholder="Buscar pedidos" type="text" id="searchInput" onkeyup="searchOrders()"/>
             <!-- Icono de Exportar -->
-            <div class="bg-blue-500 text-white px-4 py-2 rounded flex items-center space-x-2">
-                <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
-                <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
-                </div>
+                <button class="bg-blue-500 text-white px-4 py-2 rounded flex items-center space-x-2">
+                    Exportar
+                   </button>
         </div>
     </div>
     <div class="bg-white shadow-md p-4 mt-4">
