--- a/pedidos.html
+++ b/pedidos.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="imagen" href="image.png" />
@@ -51,13 +50,10 @@
             <button class="bg-gray-200 px-4 py-2 rounded" onclick="toggleOrders()">Ver pedidos cancelados</button>
             <input class="border border-gray-300 rounded px-4 py-2" placeholder="Buscar pedidos" type="text" id="searchInput" onkeyup="searchOrders()"/>
             <!-- Icono de Exportar -->
-<<<<<<< HEAD
-                <button class="bg-blue-500 text-white px-4 py-2 rounded flex items-center space-x-2">
-                    Exportar
-                   </button>
-=======
-             <button class="bg-blue-500 text-white px-4 py-2 rounded" onclick="toggleModal()">Exportar</button>
->>>>>>> 1b4a5a1c7d8c24be0427d02282044c3ee7889ba3
+            <div class="bg-blue-500 text-white px-4 py-2 rounded flex items-center space-x-2">
+                <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
+                <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
+                </div>
         </div>
     </div>
     <div class="bg-white shadow-md p-4 mt-4">
@@ -134,7 +130,7 @@
     </div>
    </div>
   </div>
-  <!--Celendario-->
+  <!--Calendario-->
     
     <script src="Pedidos.js"></script>
     </body>
