--- a/pedidos.html
+++ b/pedidos.html
@@ -52,7 +52,7 @@
             <!-- Icono de Exportar -->
             <div class="bg-blue-500 text-white px-4 py-2 rounded flex items-center space-x-2">
                 <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
-                <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
+                <button class="text-darkblue hover:text-lightblue relative" onclick="toggleModal()">Exportar</button>
                 </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
     </div>
     <div class="flex justify-end space-x-4">
      <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
-     <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="klk.png">Exportar</a>
+     <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="http://localhost:5173/pedidos.html#">Exportar</a>
     </div>
    </div>
   </div>
