--- a/pedidos.html
+++ b/pedidos.html
@@ -126,11 +126,12 @@
     </div>
     <div class="flex justify-end space-x-4">
      <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
-     <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="http://localhost:5173/pedidos.html#">Exportar</a>
+     <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="klk.png">Exportar</a>
     </div>
    </div>
   </div>
   <!--Calendario-->
+  <!--Exportar-->
     
     <script src="Pedidos.js"></script>
     </body>
