--- a/pedidos.html
+++ b/pedidos.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="imagen" href="image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panel Administrador</title>
     <script src="https://cdn.tailwindcss.com"></script>
     </head>
 <body>
