--- a/pedidos.html
+++ b/pedidos.html
@@ -25,13 +25,13 @@
         <div class="flex space-x-4">
 
             <img src="public/imagenes/pedidos.png" alt="Logo" class="h-6">
-            <a class="text-gray-600 hover:text-black" href="#">Pedidos</a>
+            <a class="text-gray-600 hover:text-black" href="pedidos.html">Pedidos</a>
 
              <img src="public/imagenes/entregas.png" alt="Logo" class="h-6">
-            <a class="text-gray-600 hover:text-black" href="#">Entregas</a>
+            <a class="text-gray-600 hover:text-black" href="Entrega.html">Entregas</a>
 
             <img src="public/imagenes/negocios.png" alt="Logo" class="h-6">
-            <a class="text-gray-600 hover:text-black" href="#">Negocios</a>
+            <a class="text-gray-600 hover:text-black" href="Negocios.html">Negocios</a>
 
             <img src="public/imagenes/Usuario.png" alt="Logo" class="h-6">
             <a class="text-gray-600 hover:text-black" href="#">Usuarios</a>
