--- a/pedidos.html
+++ b/pedidos.html
@@ -42,7 +42,7 @@
             <img src="public\imagenes\cuenta.png" alt="Logo" class="h-6">
             <a class="text-gray-600 hover:text-black" href="#">Cuenta</a>
 
-            <img src="public\imagenes\Administrador.png" alt="Logo" class="h-6">
+            <img src="public\imagenes\ADMI.png" alt="Logo" class="h-6">
             <a class="text-gray-600 hover:text-black" href="#">Administracion</a>
 
         </div>
