--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
   
           
-         <!-- Contenido Principal  -->
+         <!-- Contenido Principal1  -->
 
 
               <div class="flex flex-1"> 
