se agrego el archivo negocio.js

--- a/Negocios.html
+++ b/Negocios.html
@@ -94,7 +94,7 @@
                       <td class="py-4 px-6 text-sm">Cl. 8 Nte. #335, Popayán, Cauca</td>
                       <td class="py-4 px-6 flex items-center justify-end space-x-4">
                           <button class="text-gray-500">Perfil</button>
-                          <button class="text-red-500"> <img src= eliminar.png> </button>
+                          <button class="text-red-500"> <img src= "eliminar.png"> </button>
                       </td>
                   </tr>
                   <tr class="border-t">
@@ -105,7 +105,7 @@
                       <td class="py-4 px-6 text-sm">Cl.9 Nte. #5N 60, Comuna 1, Popayán, Cauca</td>
                       <td class="py-4 px-6 flex items-center justify-end space-x-4">
                           <button class="text-gray-500">Perfil</button>
-                          <button class="text-red-500"><img src= eliminar.png> </button>
+                          <button class="text-red-500"><img src= "eliminar.png"> </button>
                       </td>
                   </tr>
                   <tr class="border-t">
@@ -116,7 +116,7 @@
                       <td class="py-4 px-6 text-sm">Bella vista, Cra. 9b #63 N 38, Popayán, Cauca</td>
                       <td class="py-4 px-6 flex items-center justify-end space-x-4">
                           <button class="text-gray-500">Perfil</button>
-                          <button class="text-red-500"> <img src= eliminar.png></button>
+                          <button class="text-red-500"> <img src= "eliminar.png"></button>
                       </td>
                   </tr>
                   <tr class="border-t">
@@ -127,7 +127,7 @@
                       <td class="py-4 px-6 text-sm">Cl. 75 #9-06, Popayán, Cauca</td>
                       <td class="py-4 px-6 flex items-center justify-end space-x-4">
                           <button class="text-gray-500">Perfil</button>
-                          <button class="text-red-500 "> <img src= eliminar.png></button>
+                          <button class="text-red-500 "> <img src= "eliminar.png"></button>
                       </td>
                   </tr>
               </tbody>
