--- a/NEGOCIOS/negocios.html
+++ b/NEGOCIOS/negocios.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+q<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Negocios</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
 </head>
 <body class="bg-gray-100">
     <header class="bg-blueclear p-4  flex-col sm:flex-row items-center shadow animate-fade-in">
