--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <div class="group flex items-center space-x-1">
                       <img src="public/imagenes/negocios.png" alt="Logo" class="h-6">
-                      <a href="Negocios.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Negocios</a>
+                      <a href="Coop-Los-codigos\NEGOCIOS\negocios.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Negocios</a>
                     </div>
 
                     <div class="group flex items-center space-x-1">
