--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <div class="group flex items-center space-x-1">
                       <img src="public/imagenes/pedidos.png" alt="Logo" class="h-6">
-                      <a href="pedidos.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Pedidos</a>
+                      <a href="PEDIDOS\pedidos.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Pedidos</a>
                     </div>
 
                     <div class="group flex items-center space-x-1">
@@ -66,7 +66,7 @@
             <!-- Icono de Exportar -->
             <div class="group flex items-center font-semibold">
             <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
-            <a href="#" class="text-darkblue hover:text-lightblue relative ">Exportar</a>
+            <button class="text-darkblue hover:text-lightblue relative" onclick="toggleModal()">Exportar</button>
             </div>
             
             
@@ -81,10 +81,14 @@
               <input type="text" placeholder="Identificador, dirección..." class="border rounded p-2">
 
 
-               <div class="  flex items-center space-x-1 font-semibold" >
-                 <img src="public\imagenes\filtro.png" alt="Logo" class="h-6" >
-                 <a href="#" class="text-darkblue hover:text-lightblue">Filtros</a>
-               </div>
+            <div class="flex items-center space-x-1 font-semibold">
+            <img src="public/imagenes/filtro.png" alt="Logo" class="h-6">
+           <a href="#" class="text-darkblue dark:text-lightblue hover:text-lightblue dark:hover:text-darkblue">Filtros</a>
+           </div>
+
+
+
+
 
 
                <div class="flex items-center space-x-1 font-semibold" >
@@ -180,6 +184,27 @@
       </div>
   </div> 
 
+<!-- Export Modal -->
+<div id="exportModall" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center">
+  <div class="bg-white p-6 rounded shadow-md w-1/3">
+    <div class="flex justify-between items-center mb-4">
+      <h2 class="text-xl font-bold">Exportar</h2>
+      <button class="text-gray-600 text-xl" onclick="toggleModal()">×</button>
+    </div>
+    <div class="mb-4">
+      <label class="block text-gray-700 mb-2">Comienzo</label>
+      <input type="date" class="border border-gray-300 rounded px-4 py-2 w-full"/>
+    </div>
+    <div class="mb-4">
+      <label class="block text-gray-700 mb-2">Fin</label>
+      <input type="date" class="border border-gray-300 rounded px-4 py-2 w-full"/>
+    </div>
+    <div class="flex justify-end space-x-4">
+      <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
+      <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="klk.png">Exportar</a>
+    </div>
+  </div>
+</div>
   <script src="index.js"> </script>
   <script type="module" src="/main.js"></script>
   </body>
