--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="flex flex-col h-screen border-r-2">
               <header class="bg-blueclear p-4 flex flex-col sm:flex-row items-center justify-between shadow animate-fade-in">
                 <div class="flex items-center">
-                  <img src="public/imagenes/image.png" alt="Logo" class="h-8">
+                  <img src="public/imagenes/image.png" alt="Logo" class=" group h-8">
                   <nav class="ml-6 flex flex-wrap space-x-4">
 
 
@@ -45,10 +45,12 @@
         </div>
                  
          <!-- ADMINISTRACION -->
+        
         <div class="flex items-center space-x-2 mt-2 sm:mt-1">
           <button class="bg-dark-blue-600 text-darkblue font-semibold px-4 py-2 rounded">Administración</button>
-          <img src="public/imagenes/Usuario.png" alt="Avatar" class="h-8 w-8 rounded-full ">
-        </div>
+            <img src="public/imagenes/Usuario.png" alt="Avatar" class="h-8 w-8 rounded-full ">
+                 </div>
+
 
         <button id="theme-toggle" class="focus:outline-none" onclick="toggleTheme()">
           <i id="theme-icon" class="fas fa-moon text-xl"></i>
