--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   </div> 
 
 <!-- Export Modal -->
-<div id="exportModall" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center">
+<div id="exportModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center">
   <div class="bg-white p-6 rounded shadow-md w-1/3">
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-xl font-bold">Exportar</h2>
@@ -201,10 +201,11 @@
     </div>
     <div class="flex justify-end space-x-4">
       <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
-      <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="klk.png">Exportar</a>
+      <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="hola.pdf">Exportar</a>
     </div>
   </div>
 </div>
+
   <script src="index.js"> </script>
   <script type="module" src="/main.js"></script>
   </body>
