--- a/NEGOCIOS/negocios.html
+++ b/NEGOCIOS/negocios.html
@@ -28,7 +28,7 @@
          <div class="flex items cross-size space-x-8">
             <div class="group flex items-center space-x-1">
               <img src="imagenes/pedidos.png" alt="Logo" class="h-6">
-              <a href="" class="text-darkblue hover:text-black font-semibold relative group-hover:underline">Pedidos</a>
+              <a href="../PEDIDOS/pedidos.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline">Pedidos</a>
             </div>
 
             <div class="group flex items-center space-x-1">
