--- a/PEDIDOS/pedidos.html
+++ b/PEDIDOS/pedidos.html
@@ -31,7 +31,7 @@
             <a class="text-gray-600 hover:text-black" href="Entrega.html">Entregas</a>
 
             <img src="../public/imagenes/negocios.png" alt="Logo" class="h-6">
-            <a class="text-gray-600 hover:text-black" href="Negocios.html">Negocios</a>
+            <a class="text-gray-600 hover:text-black" href="../NEGOCIOS/negocios.html">Negocios</a>
 
             <img src="../public/imagenes/Usuario.png" alt="Logo" class="h-6">
             <a class="text-gray-600 hover:text-black" href="#">Usuarios</a>
