--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index2.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   </head>
-  <body class=""> <!-- Default mode -->
+  <body class="dark-mode "> <!-- Default mode -->
     <div class="flex flex-col h-screen border-r-2">
               <header class="bg-blueclear p-4 flex flex-col sm:flex-row items-center justify-between shadow animate-fade-in">
                 <div class="flex items-center">
@@ -64,7 +64,7 @@
                  </div>
 
            
-            <div class="grid grid-cols-2 gap-1  ">
+            <div class="grid grid-cols-2 gap-1">
             <!-- Icono de Exportar -->
             <div class="group flex items-center font-semibold">
             <img src="public/imagenes/exportar.png" alt="Logo" class="h-6">
