interfaz de crear un negocio

--- a/NEGOCIOS/crear negocio.html
+++ b/NEGOCIOS/crear negocio.html
@@ -318,7 +318,7 @@
         <label>Distancia (km)</label>
         <input type="text" class="border p-1 w-1/4 ml-2" value="3,00">
     </div>
-     <!-- Guardar Button -->
+     <!-- Guardar Boton -->
      <div class="mt-8">
         <button class="bg-blue-500 text-white w-full px-4 py-2 rounded-lg">Guardar</button>
     </div>
