--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                <div class="flex items-center space-x-1 font-semibold" >
                 <img src="public\imagenes\configuraciones.png" alt="Logo" class="h-6" >
-                <a href="#" class="text-darkblue hover:text-lightblue ">Configuración</a>
+                <a href="Configuración.html" class="text-darkblue hover:text-lightblue ">Configuración</a>
               </div>
 
               <div class="flex items-center" >
