--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
     <div class="flex justify-end space-x-4">
       <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
-      <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="hola.pdf">Exportar</a>
+      <a href="hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="hola.pdf">Exportar</a>
     </div>
   </div>
 </div>
