--- a/PEDIDOS/pedidos.html
+++ b/PEDIDOS/pedidos.html
@@ -112,7 +112,7 @@
         </table>
     </div>
     <!-- Export Modal -->
-<div id="exportModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center ">
+<div id="exportModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden ">
   <div class="bg-white p-6 rounded shadow-md w-1/3">
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-xl font-bold">Exportar</h2>
