--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div class="group flex items-center space-x-1">
                       <img src="public/imagenes/configuraciones.png" alt="Logo" class="h-6">
-                      <a href="#" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Configuraciones</a>
+                      <a href="Configuración\configuracion.html" class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide">Configuraciones</a>
                     </div>
             </nav>
         </div>
@@ -189,7 +189,7 @@
 <!-- Export Modal -->
 
 
-<div id="exportModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center">
+<div id="exportModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden">
   <div class="bg-white p-6 rounded shadow-md w-1/3">
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-xl font-bold">Exportar</h2>
