--- a/NEGOCIOS/negocios.html
+++ b/NEGOCIOS/negocios.html
@@ -77,7 +77,7 @@
                 
           <div class="flex justify-around ">
               <button class="text-gray-600">Más opciones</button>
-              <button class=" bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">Añadir</button>
+              <a href="./crear negocio.html" class="text-darkblue dark:text-lightblue hover:text-lightblue dark:hover:text-darkblue">Añadir</a>
           </div>
       </div>
      
