Un cambio de rutina

--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
               </div>
             </main> 
 
-           <!-- <main class=" col-span-0">  no borrar-->
+           <!-- <main class=" col-span-0">  no borrar-->}
+
           
+          <div class=""></div>
 
       </div>
   </div> 
