se le agrego funcion a los botones de 'anterior'- 'siguiente' y 'añadir'

--- a/NEGOCIOS/negocios.html
+++ b/NEGOCIOS/negocios.html
@@ -71,8 +71,8 @@
 <br>
   <div class="flex justify-around">
     
-        <button class="flex items-center space-x-11 h-7 text-gray-500 border rounded-full p-2 "> <img src="imagenes\anterior.png" alt="Logo" class="items-center h-5 w-5">Anterior</button>
-          <button class="flex absolute top-18 right-2  items-center h-7 text-gray-500 border rounded-full p-2 "> <img src="imagenes/siguiente.png" alt="Logo" class="items-center h-5 w-5">Siguiente</button>
+        <button onclick="volverPaginaAnterior()" class="flex items-center space-x-11 h-7 text-gray-500 border rounded-full p-2"><img src="imagenes\anterior.png" alt="Logo" class="items-center h-5 w-5">Anterior</button>
+        <button onclick="avanzarPaginaSiguiente()" class="flex absolute top-18 right-2  items-center h-7 text-gray-500 border rounded-full p-2 "> <img src="imagenes/siguiente.png" alt="Logo" class="items-center h-5 w-5">Siguiente</button>
           <div class="relative">
             <button onclick="toggleDropdown()" class="text-gray-600 flex items-center space-x-2">
                 <span>Más opciones</span>
