--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="public\imagenes\image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PanasCoop</title>
@@ -11,7 +11,7 @@
     <!-- biblioteca de iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
-  <body class=" "> <!-- Default mode -->
+  <body class=""> <!-- Default mode -->
     <div class="flex flex-col h-screen border-r-2">
               <header class="bg-blueclear p-4 flex flex-col sm:flex-row items-center justify-between shadow animate-fade-in">
                 <div class="flex items-center">
@@ -58,10 +58,9 @@
             <img src="public/imagenes/Usuario.png" alt="Avatar" class="h-8 w-8 rounded-full ">
                  </div>
 
-
-        <button id="theme-toggle" class="focus:outline-none" onclick="toggleTheme()">
-          <i id="theme-icon" class="fas fa-moon text-xl"></i>
-      </button>
+                 <button id="theme-toggle" class="focus:outline-none" onclick="toggleTheme()">
+                  <i id="theme-icon" class="fas fa-moon text-xl"></i>
+              </button>
     </header>
 
        <div class="p-4 flex flex-col sm:flex-row items-center justify-between bg-bluecielo ">  
