--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           
          <!-- Contenido Principal1  -->
 
+<!--Comentario-->
 
               <div class="flex flex-1"> 
               <!-- lado Izquierdo -->
