--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <!-- biblioteca de iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
-  <body class=" "> <!-- Default mode -->
+  <!--
+  sm:648
+  md:768
+  lg:1024
+  xl:1280
+  -->
+  <body class=""> <!-- Default mode -->
     <div class="flex flex-col h-screen border-r-2">
               <header class="bg-blueclear p-4 flex flex-col sm:flex-row items-center justify-between shadow animate-fade-in">
                 <div class="flex items-center">
@@ -107,7 +113,7 @@
 
             <div class="flex items-center space-x-1 font-semibold">
             <img src="public/imagenes/filtro.png" alt="Logo" class="h-6">
-           <a href="#" class="text-darkblue dark:text-lightblue hover:text-lightblue dark:hover:text-darkblue">Filtros</a>
+           <a href="#" class="text-darkblue hover:text-lightblue">Filtros</a>
            </div>
 
 
