actualizacion de pantalla

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   -->
   <body class=""> <!-- Default mode -->
     <div class="flex flex-col h-screen border-r-2">
-              <header class="bg-blueclear p-4 flex justify-between flex-row sm:flex-row items-center shadow animate-fade-in">
+              <header class="bg-blueclear p-4 md:flex-row flex justify-between flex-row sm:flex-row items-center shadow animate-fade-in">
                 <div class="flex items-center">
-                  <img src="public/imagenes/image.png" alt="Logo" class=" group h-8">
+                  <img src="public/imagenes/image.png" alt="Logo" class="group h-8">
                   <nav class="ml-6 hidden flex-wrap space-x-4 md:flex">
 
 
