--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
              </div>
 
             <div class="flex items-center space-x-1 font-semibold">
-              <button onclick="toggleForm()">
+            <button onclick="toggleForm()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                   <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
                 </svg>
@@ -270,7 +270,9 @@
     </div>
    </div>
 
+   <!--Sin Asignar-->
 
+   
    
 
 
