Acomodacion del boton exportar

--- a/index.html
+++ b/index.html
@@ -257,20 +257,20 @@
 </div>
 
 <!-- Import Modal -->
-   <div class="hidden fixed inset-0 bg-gray-800 bg-opacity-50 items-center justify-center" id="importModal">
-    <div class="bg-white p-8 rounded shadow-lg text-center relative">
-     <button class="absolute top-2 right-2 text-gray-600" onclick="toggleImportModal()">
+<div class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden" id="importModal">
+  <div class="bg-white p-8 rounded shadow-lg text-center relative">
+    <button class="absolute top-2 right-2 text-gray-600" onclick="toggleImportModal()">
       ×
-     </button>
-     <p class="text-lg font-semibold">
+    </button>
+    <p class="text-lg font-semibold">
       Deja los archivos aquí
-     </p>
-     <p class="text-gray-500">
+    </p>
+    <p class="text-gray-500">
       Formatos de archivos admitidos: csv, ods, xlsx
-     </p>
-     <input class="mt-4" type="file" accept=".csv, .ods, .xlsx"/>
-    </div>
-   </div>
+    </p>
+    <input class="mt-4" type="file" accept=".csv, .ods, .xlsx"/>
+  </div>
+</div>
 
    <!--Sin Asignar-->
 
