colores en pedidos

--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
           
          <!-- Contenido Principal1  -->
 
-<!--Comentario-->
 
               <div class="flex flex-1"> 
               <!-- lado Izquierdo -->
@@ -251,7 +250,7 @@
     </div>
     <div class="flex justify-end space-x-4">
       <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
-      <a href="holaa.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="hola.pdf">Exportar</a>
+      <a href="holaa.pdf" class="bg-BTverde text-black px-4 py-2 rounded" download="hola.pdf">Exportar</a>
     </div>
   </div>
 </div>
