--- a/PEDIDOS/pedidos.html
+++ b/PEDIDOS/pedidos.html
@@ -6,6 +6,7 @@
     <title>Panel Administrador</title>
     <link rel="stylesheet" href="pedidos.css">
     <script src="https://cdn.tailwindcss.com"></script>
+
     </head>
    
   <body class="">
@@ -49,7 +50,7 @@
                 <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
                 <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"/>
               </svg>
-            <a class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide" href="#">Configuraciones</a>
+            <a class="text-darkblue hover:text-black font-semibold relative group-hover:underline-slide" href="PEDIDOS\pedidos.html">Configuraciones</a>
 
             <!--<img src="../public/imagenes/cuenta.png" alt="Logo" class="h-6">-->
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-add" viewBox="0 0 16 16">
@@ -72,13 +73,17 @@
             <button class="bg-azulclaro px-4 py-2 rounded" id="filterButton" onclick="toggleFilter()">Ver pedidos cancelados</button>
             <input class="border border-gray-300 rounded px-4 py-2" placeholder="Buscar pedidos" type="text" id="searchInput" onkeyup="searchOrders()"/>
             <!-- Icono de Exportar -->
-            <div class= "text-white px-4 py-2 rounded flex items-center space-x-2">
-                <img src="../public/imagenes/exportar.png" alt="Logo" class="h-6">
-                <button class="text-darkblue hover:text-black relative" onclick="toggleModal()">Exportar</button>
+            <div class= "text-black px-4 py-2 rounded flex items-center space-x-2">
+                <!--<img src="../public/imagenes/exportar.png" alt="Logo" class="h-6">-->
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                  <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                  <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708z"/>
+                </svg>
+                <button class="text-darkblue hover:text-black font-semibold" onclick="toggleModal()">Exportar</button>
                 </div>
         </div>
     </div>
-    <div class="bg-white shadow-md p-4 mt-4">
+    <div class="bg-azulclaro shadow-md p-4 mt-4">
         <table class="w-full text-center" id="ordersTable">
             <thead>
                 <tr class="border-b">
@@ -95,7 +100,7 @@
                 <tr class="border-b">
                     <td class="py-2"># 9C9</td>
                     <td class="py-2">celia cruz</td>
-                    <td class="py-2"><span class="bg-green-500 text-white px-2 py-1 rounded">Entregado</span></td>
+                    <td class="py-2"><span class="bg-BTverde text-black px-2 py-1 rounded">Entregado</span></td>
                     <td class="py-2">Entregar al restaurante el Rincon</td>
                     <td class="py-2">46.000 COP</td>
                     <td class="py-2"><i class="fas fa-file-invoice"></i></td>
@@ -104,7 +109,7 @@
                 <tr class="border-b">
                     <td class="py-2"># M78</td>
                     <td class="py-2">camilo torres</td>
-                    <td class="py-2"><span class="bg-red-500 text-white px-2 py-1 rounded">Rechazado</span></td>
+                    <td class="py-2"><span class="bg-BTrojo text-black px-2 py-1 rounded">Rechazado</span></td>
                     <td class="py-2">Entregar al restaurante el Fusion</td>
                     <td class="py-2">77.000 COP</td>
                     <td class="py-2"><i class="fas fa-file-invoice"></i></td>
@@ -113,7 +118,7 @@
                 <tr class="border-b">
                     <td class="py-2"># 4JD</td>
                     <td class="py-2">rodrigo perez</td>
-                    <td class="py-2"><span class="bg-green-500 text-white px-2 py-1 rounded">Entregado</span></td>
+                    <td class="py-2"><span class="bg-BTverde text-black px-2 py-1 rounded">Entregado</span></td>
                     <td class="py-2">Entregar al restaurante gourmet</td>
                     <td class="py-2">22.000 COP</td>
                     <td class="py-2"><i class="fas fa-file-invoice"></i></td>
@@ -122,7 +127,7 @@
                 <tr>
                     <td class="py-2"># HJ8</td>
                     <td class="py-2">sergio caro</td>
-                    <td class="py-2"><span class="bg-green-500 text-white px-2 py-1 rounded">Entregado</span></td>
+                    <td class="py-2"><span class="bg-BTverde text-black px-2 py-1 rounded">Entregado</span></td>
                     <td class="py-2">Entregar al restaurante Delicias</td>
                     <td class="py-2">12.000 COP</td>
                     <td class="py-2"><i class="fas fa-file-invoice"></i></td>
@@ -133,7 +138,7 @@
     </div>
     <!-- Export Modal -->
 <div id="exportModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center ">
-  <div class="bg-white p-6 rounded shadow-md w-1/3">
+  <div class="bg-azulclaro p-6 rounded shadow-md w-1/3">
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-xl font-bold">Exportar</h2>
       <button class="text-gray-600 text-xl" onclick="toggleModal()">×</button>
@@ -148,7 +153,7 @@
     </div>
     <div class="flex justify-end space-x-4">
       <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded" onclick="toggleModal()">Cancelar</button>
-      <a href="/tu/ruta/hola.pdf" class="bg-green-500 text-white px-4 py-2 rounded" download="klk.png">Exportar</a>
+      <a href="/tu/ruta/hola.pdf" class="bg-BTverde text-black px-4 py-2 rounded" download="klk.png">Exportar</a>
     </div>
   </div>
 </div>
