se agrego el icono activado con su funcion

--- a/NEGOCIOS/negocios.html
+++ b/NEGOCIOS/negocios.html
@@ -11,7 +11,8 @@
 <body class="bg-gray-100">
     <header class="bg-blueclear p-4  flex-col sm:flex-row items-center shadow animate-fade-in">
         <div class="flex items-center">
-          <img src="imagenes/image.png" alt="Logo" class="h-8">
+          <img src="imagenes/image.png" alt="Logo" class="h-8" onclick="irAlMenu()">
+          
          <nav class="ml-10 flex space-x-12">
             <div class="bg-white shadow-md">
                 <div class="flex items-center justify-between p-4">
