--- a/index.html
+++ b/index.html
@@ -85,12 +85,32 @@
             </svg>
           </div>
         </div>
+
+
         <!--Hamburguesa-->
+<!-- Contenedor principal 
+<div class="relative inline-block"> -->
+  <!-- Botón que activa el menú desplegable 
+  <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+    Menú
+  </button> -->
+  <!-- Contenedor secundario que contiene las opciones del menú desplegable -->
+ <!-- <div class="absolute hidden bg-white shadow-md p-4 w-48">
+    <ul>
+      <li class="py-2 border-b border-gray-200"><a href="#" class="text-gray-600 hover:text-gray-900">Opción 1</a></li>
+      <li class="py-2 border-b border-gray-200"><a href="#" class="text-gray-600 hover:text-gray-900">Opción 2</a></li>
+      <li class="py-2"><a href="#" class="text-gray-600 hover:text-gray-900">Opción 3</a></li>
+    </ul>
+  </div>
+</div> no borrar -->
+
+
+
         <div class="block md:hidden">
           <button onclick="Hamburguesa()">
           <i class="bi bi-list text-4xl"></i>
         </button>
-          <div id="menu" class="hidden md:678px ">
+          <div id="menu" class=" md:678px absolute hidden bg-white shadow-md p-4 w-48">
             <ul>
                 <li> <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-seam" viewBox="0 0 16 16">
                   <a href="PEDIDOS\pedidos.html" class=" hover:text-black font-semibold relative group-hover:underline-slide">
